# add_question_submit_rust

./: ARCHITECTURE.md  ARCH_VALIDATION.md  ASYNC_OPENAI_MIGRATION.md  Cargo.toml  DATAFLOW.md  ERROR_HANDLING.md  QUICK_REF.md  QUICK_REFERENCE.md  README_REFACTORING.md  REFACTORING.md  REFACTOR_DONE.md  output.txt  todo.md
.zed/: debug.json
src/: app.rs  ask_llm.rs  config.rs  error.rs  lib.rs  main.rs  paper_processor.rs  processing.rs  search_bank.rs  subject.rs
src/api/: llm.rs  mod.rs  tiku.rs
src/browser/: connection.rs  headless.rs  mod.rs
src/clients/: llm_client.rs  mod.rs  tiku_client.rs
src/infrastructure/: js_executor.rs  mod.rs
src/model/: mod.rs  toml_loader.rs
src/models/: mod.rs  question.rs
src/models/loaders/: mod.rs  toml_loader.rs
src/orchestrator/: batch_processor.rs  mod.rs  paper_processor.rs
src/services/: llm_service.rs  llm_service.rs.backup  matching_service.rs  mod.rs  paper_service.rs  question_search.rs  question_service.rs  search_service.rs  warn_writer.rs
src/utils/: logger.rs  logging.rs  mod.rs
src/workflow/: mod.rs  question_ctx.rs  question_flow.rs
tests/: integration_test.rs
