[package]
name = "add_question_submit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chromiumoxide = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-openai = { version = "0.32.2", features = ["_api", "chat-completion"] }
phf = "0.13.1"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
